# csharp-semantic-search

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: main.rs
